--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <div class="info-box">
         <div class="artwork-container">
             <a id="songURL" href="https://soundcloud.com/discover" target="_blank">
-              <img src="./default-art.jpg" alt="Default Artwork" draggable="false">
+              <img src="./default-art.jpg" alt="Artwork" draggable="false">
             </a>
         </div>
         <div class="song-info">
           <h2 id="title">Unknown Title</h2>
-          <h3 id="artist">Unknown Artist</h3>
+          <h3 id="username">Unknown User</h3>
         </div>
         <div class="info-container">
           <button id="recordBtn" type="submit">Get ID</button>
