--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="info-box">
         <div class="artwork-container">
             <a id="songURL" href="https://soundcloud.com/discover" target="_blank">
-              <img src="./default-art.jpg" alt="Artwork" draggable="false">
+              <img id="artwork" src="./default-art.jpg" alt="Artwork" draggable="false">
             </a>
         </div>
         <div class="song-info">
