--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
           <h3 id="username">Unknown User</h3>
         </div>
         <div id="get-id" class="get-id-container">
-          <button id="recordBtn" type="submit">Get ID</button>
+          <button id="recordBtn">Get ID</button>
         </div>
         <div id="buffer" class="buffer" style="display: none;">
           <img class="buffer-animation" src="./buffer.png" alt="Buffer" draggable="false">
-          <h2 id="audio-status"></h2>
+          <h3 id="audio-status"></h3>
         </div>
       </div>
     </main>
