Added confidence values

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           </a>
           <h2 id="title">Unknown Title</h2>
           <h3 id="username">Unknown User</h3>
+          <h4 id="confidence">Confidence 0%</h4>
         </div>
         <div id="get-id" class="get-id-container">
           <button id="recordBtn">Get ID</button>
