--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta property="og:url" content="http://www.taylorfergusson.com/">
     <meta name="description" property="og:description" content="Taylor Fergusson">
     <meta property="og:image" content="https://www.taylorfergusson.com/img/thumbnail.png">
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Foundcloud</title>
     <link rel="stylesheet" href="./main.css">
     <link rel="icon" href="https://www.taylorfergusson.com/img/icons/favicon.png">
