--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Foundcloud</title>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./main1.css">
     <link rel="icon" href="https://www.taylorfergusson.com/img/icons/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
