Changed it back

--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
       </div>
     </main>
 
-    <script type="module" src="recorder.js"></script>
-    <script type="module">
-      import { startRecording } from './recorder.js';
-      document.getElementById("recordBtn").addEventListener("click", startRecording);
+    <script src="recorder.js"></script>
+    <script>
+        document.getElementById("recordBtn").addEventListener("click", startRecording);
     </script>
 
   </body>
