--- a/songs.html
+++ b/songs.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Foundcloud</title>
-    <link rel="stylesheet" href="./main1.css">
+    <link rel="stylesheet" href="./songs_styles.css">
     <link rel="icon" href="https://www.taylorfergusson.com/img/icons/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,11 +20,9 @@
   </head>
   <body>
     <main>
-      <div class="info-box">
-        <div class="songs-box">
-          <ol id="songList">
-          </ol>
-        </div>
+      <div class="songs-box">
+        <ol id="songList">
+        </ol>
       </div>
     </main>
 
