--- a/songs.html
+++ b/songs.html
@@ -3,11 +3,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
-    <meta name="title" property="og:title" content="Taylor Fergusson">
+    <meta name="title" property="og:title" content="Foundcloud">
     <meta property="og:site_name" content="Taylor Fergusson">
-    <meta property="og:url" content="http://www.taylorfergusson.com/">
-    <meta name="description" property="og:description" content="Taylor Fergusson">
-    <meta property="og:image" content="https://www.taylorfergusson.com/img/thumbnail.png">
+    <meta property="og:url" content="https://foundcloud.taylorfergusson.com/">
+    <meta name="description" property="og:description" content="Music recognition">
+    <!-- <meta property="og:image" content="https://www.taylorfergusson.com/img/thumbnail.png"> -->
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
