Added server down code

--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
           <h3 id="username">Unknown User</h3>
           <h4 id="confidence">Confidence 0%</h4>
         </div>
-        <div id="get-id" class="get-id-container">
+        <div id="get-id" class="get-id-container" style="display: none;">
           <button id="recordBtn">Get ID</button>
         </div>
         <div id="buffer" class="buffer" style="display: none;">
           <img class="buffer-animation" src="./buffer.png" alt="Buffer" draggable="false">
           <h3 id="audio-status"></h3>
+        </div>
+        <div id="server-down" style="display: none;">
+          <img class="artwork" src="./uni.jpg" alt="Server down" draggable="false">
+          <h2>Server currently down... I'm so sorry.</h2>
+          <h2>Please check again later though &#128523;</h2>
         </div>
       </div>
       <a href="songs" class="view-songlist" target="_blank">
