--- a/songs.html
+++ b/songs.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Foundcloud</title>
+    <title>Foundcloud | Songs</title>
     <link rel="stylesheet" href="./songs_styles2.css">
     <link rel="icon" href="https://www.taylorfergusson.com/img/icons/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
