Send multiple recordings

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
-    <meta name="title" property="og:title" content="Foundcloud">
+    <meta name="title" property="og:title" content="FoundCloud">
     <meta property="og:site_name" content="Taylor Fergusson">
     <meta property="og:url" content="https://foundcloud.taylorfergusson.com/">
     <meta name="description" property="og:description" content="Music recognition">
@@ -11,7 +11,7 @@
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Foundcloud</title>
+    <title>FoundCloud</title>
     <link rel="stylesheet" href="./main1.css">
     <link rel="icon" href="https://www.taylorfergusson.com/img/icons/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
